--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "一定よりも高いレベルの単語をハイライトしたり、 日本語に置き換えたりします。",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.js"
   },
   "repository": {
     "type": "git",
